// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FRTDiscoverabilityBanner does not render when dontShowAgain is true 1`] = `<div />`;

exports[`FRTDiscoverabilityBanner does not render when remindMeAt timestamp is in the future 1`] = `<div />`;

exports[`FRTDiscoverabilityBanner renders 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="discoverability-card"
    >
      <span
        class="wcpay-pill discoverability-card__new-feature-pill"
      >
        New
      </span>
      <h3
        class="discoverability-card__header"
      >
        Enhanced fraud protection for your store
      </h3>
      <p
        class="discoverability-card__body"
      >
        New features have been added to WooCommerce Payments to help 
        <strong>
          reduce fraudulent transactions
        </strong>
         on your store. By using a set of customizable rules to evaluate incoming orders, your store is better protected from fraudsters.
      </p>
      <div
        class="discoverability-card__actions"
      >
        <a
          class="components-button is-primary"
          href="https://woocommerce.com/document/woocommerce-payments/fraud-and-disputes/fraud-protection/"
          target="_blank"
        >
          Learn more
        </a>
        <button
          class="components-button is-tertiary"
          type="button"
        >
          Remind me later
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FRTDiscoverabilityBanner renders when remindMeAt timestamp is in the past 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="discoverability-card"
    >
      <span
        class="wcpay-pill discoverability-card__new-feature-pill"
      >
        New
      </span>
      <h3
        class="discoverability-card__header"
      >
        Enhanced fraud protection for your store
      </h3>
      <p
        class="discoverability-card__body"
      >
        New features have been added to WooCommerce Payments to help 
        <strong>
          reduce fraudulent transactions
        </strong>
         on your store. By using a set of customizable rules to evaluate incoming orders, your store is better protected from fraudsters.
      </p>
      <div
        class="discoverability-card__actions"
      >
        <a
          class="components-button is-primary"
          href="https://woocommerce.com/document/woocommerce-payments/fraud-and-disputes/fraud-protection/"
          target="_blank"
        >
          Learn more
        </a>
        <button
          class="components-button is-tertiary"
          type="button"
        >
          Remind me later
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FRTDiscoverabilityBanner renders with dismiss button if remindMeCount greater than or equal to 3 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="discoverability-card"
    >
      <span
        class="wcpay-pill discoverability-card__new-feature-pill"
      >
        New
      </span>
      <h3
        class="discoverability-card__header"
      >
        Enhanced fraud protection for your store
      </h3>
      <p
        class="discoverability-card__body"
      >
        New features have been added to WooCommerce Payments to help 
        <strong>
          reduce fraudulent transactions
        </strong>
         on your store. By using a set of customizable rules to evaluate incoming orders, your store is better protected from fraudsters.
      </p>
      <div
        class="discoverability-card__actions"
      >
        <a
          class="components-button is-primary"
          href="https://woocommerce.com/document/woocommerce-payments/fraud-and-disputes/fraud-protection/"
          target="_blank"
        >
          Learn more
        </a>
        <button
          class="components-button is-tertiary"
          type="button"
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FRTDiscoverabilityBanner renders without dismiss button if remindMeCount greater than 0 but less than 3 1`] = `
<div>
  <div
    class="components-card is-size-medium css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="discoverability-card"
    >
      <span
        class="wcpay-pill discoverability-card__new-feature-pill"
      >
        New
      </span>
      <h3
        class="discoverability-card__header"
      >
        Enhanced fraud protection for your store
      </h3>
      <p
        class="discoverability-card__body"
      >
        New features have been added to WooCommerce Payments to help 
        <strong>
          reduce fraudulent transactions
        </strong>
         on your store. By using a set of customizable rules to evaluate incoming orders, your store is better protected from fraudsters.
      </p>
      <div
        class="discoverability-card__actions"
      >
        <a
          class="components-button is-primary"
          href="https://woocommerce.com/document/woocommerce-payments/fraud-and-disputes/fraud-protection/"
          target="_blank"
        >
          Learn more
        </a>
        <button
          class="components-button is-tertiary"
          type="button"
        >
          Remind me later
        </button>
      </div>
    </div>
  </div>
</div>
`;
